@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.6 2008/09/01 06:57:58 dholland Exp $
+$NetBSD: distinfo,v 1.7 2011/11/02 20:22:15 shattered Exp $
 
-SHA1 (rayshade.4.0.tar.Z) = 5fd1ce05e7ba3bc8e8b337c212eccb6b53b5b4ca
-RMD160 (rayshade.4.0.tar.Z) = a19bf35aa3f66de9ce406a1a98cf7edbde60f356
-Size (rayshade.4.0.tar.Z) = 369527 bytes
+SHA1 (rayshade.4.0.6.tar.Z) = 5fd1ce05e7ba3bc8e8b337c212eccb6b53b5b4ca
+RMD160 (rayshade.4.0.6.tar.Z) = a19bf35aa3f66de9ce406a1a98cf7edbde60f356
+Size (rayshade.4.0.6.tar.Z) = 369527 bytes
 SHA1 (patch-aa) = b510e1b3a98ef25ffe0d23f9b499fb5c16c333f4
 SHA1 (patch-ab) = 13b48848c4a40d86ee5ceef8dddf10988b59e088
 SHA1 (patch-ac) = 496d4d89edaa7a8786cbd22c2fc31679fda96df5
